tests/snapshots/messages__type2_scheldt_inbound.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,23NCqt5OiL0>Ve4MI0rtEb0P2@9G,0*03\")"
---
PositionReport(
    PositionReport {
        message_type: 2,
        repeat_indicator: 0,
        mmsi: 233110000,
        navigation_status: Some(
            Moored,
        ),
        rate_of_turn: Some(
            TurningRight,
        ),
        speed_over_ground: Some(
            9.2,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            3.1904566,
        ),
        latitude: Some(
            51.364235,
        ),
        course_over_ground: Some(
            315.8,
        ),
        true_heading: Some(
            320,
        ),
        timestamp: 16,
        maneuver_indicator: None,
        raim: true,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 4,
                sub_message: SlotNumber(
                    599,
                ),
            },
        ),
    },
)
