tests/snapshots/messages__type4_canary_islands.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,4028j=1uho;N>Npi9j?wtk700@8a,0*09\")"
---
BaseStationReport(
    BaseStationReport {
        message_type: 4,
        repeat_indicator: 0,
        mmsi: 2241076,
        year: Some(
            2012,
        ),
        month: Some(
            3,
        ),
        day: Some(
            14,
        ),
        hour: Some(
            11,
        ),
        minute: Some(
            30,
        ),
        second: Some(
            14,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            -15.560865,
        ),
        latitude: Some(
            27.96066,
        ),
        epfd: Surveyed,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 4,
                sub_message: SlotNumber(
                    553,
                ),
            },
        ),
    },
)
