tests/snapshots/messages__type4_denmark.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,4020ssAuho;N?PeNwjOAp<70089A,0*09\")"
---
BaseStationReport(
    BaseStationReport {
        message_type: 4,
        repeat_indicator: 0,
        mmsi: 2112493,
        year: Some(
            2012,
        ),
        month: Some(
            3,
        ),
        day: Some(
            14,
        ),
        hour: Some(
            11,
        ),
        minute: Some(
            30,
        ),
        second: Some(
            15,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            9.936202,
        ),
        latitude: Some(
            54.66461,
        ),
        epfd: Surveyed,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 2,
                sub_message: SlotNumber(
                    593,
                ),
            },
        ),
    },
)
