tests/snapshots/messages__type4_ligurian_sea.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,402FhaQuho6Nj0dsn4I=k<i004ip,0*77\")"
---
BaseStationReport(
    BaseStationReport {
        message_type: 4,
        repeat_indicator: 0,
        mmsi: 2470054,
        year: Some(
            2012,
        ),
        month: Some(
            3,
        ),
        day: Some(
            14,
        ),
        hour: Some(
            6,
        ),
        minute: Some(
            30,
        ),
        second: Some(
            50,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            9.816216,
        ),
        latitude: Some(
            44.0675,
        ),
        epfd: Gps,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 1,
                sub_message: UtcHourAndMinute(
                    6,
                    30,
                ),
            },
        ),
    },
)
