tests/snapshots/messages__type4_puget_sound.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,4h3OvjAuho;N>o=cf0Knevo00l3;,0*38\")"
---
BaseStationReport(
    BaseStationReport {
        message_type: 4,
        repeat_indicator: 3,
        mmsi: 3669705,
        year: Some(
            2012,
        ),
        month: Some(
            3,
        ),
        day: Some(
            14,
        ),
        hour: Some(
            11,
        ),
        minute: Some(
            30,
        ),
        second: Some(
            14,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            -122.84,
        ),
        latitude: Some(
            48.6801,
        ),
        epfd: Surveyed,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcIndirect,
                slot_timeout: 5,
                sub_message: ReceivedStations(
                    203,
                ),
            },
        ),
    },
)
